# ChangeLog for media-libs/exiftool
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.40 2008/08/03 07:24:35 graaff Exp $

  03 Aug 2008; Hans de Graaff <graaff@gentoo.org> -exiftool-6.90.ebuild,
  -exiftool-7.06.ebuild, -exiftool-7.11.ebuild:
  Remove old versions

*exiftool-7.39 (03 Aug 2008)

  03 Aug 2008; Hans de Graaff <graaff@gentoo.org> +exiftool-7.39.ebuild:
  Version bump, closing #233524.

  14 Jul 2008; nixnut <nixnut@gentoo.org> exiftool-7.13.ebuild:
  Stable on ppc wrt bug 230954

  10 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  exiftool-7.13.ebuild:
  stable amd64, bug 230954

  09 Jul 2008; Raúl Porcel <armin76@gentoo.org> exiftool-7.13.ebuild:
  sparc stable wrt #230954

  06 Jul 2008; Christian Faulhammer <opfer@gentoo.org> exiftool-7.13.ebuild:
  stable x86, bug 230954

*exiftool-7.35 (06 Jul 2008)

  06 Jul 2008; Markus Meier <maekke@gentoo.org> +exiftool-7.35.ebuild:
  bump to 7.35, requested by opfer

*exiftool-7.13 (18 Jan 2008)

  18 Jan 2008; Hans de Graaff <graaff@gentoo.org> +exiftool-7.13.ebuild:
  Version bump #206467

*exiftool-7.11 (13 Jan 2008)

  13 Jan 2008; Hans de Graaff <graaff@gentoo.org> +exiftool-7.11.ebuild:
  Version bump

  16 Dec 2007; Ferris McCormick <fmccor@gentoo.org> exiftool-7.00.ebuild:
  Sparc stable, bug #202457; good since early November.

  16 Dec 2007; Markus Meier <maekke@gentoo.org> exiftool-7.00.ebuild:
  x86 stable, bug #202457

  16 Dec 2007; nixnut <nixnut@gentoo.org> exiftool-7.00.ebuild:
  Stable on ppc wrt bug 202457

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> exiftool-7.00.ebuild:
  amd64 stable wrt #202457

*exiftool-7.06 (16 Dec 2007)

  16 Dec 2007; Hans de Graaff <graaff@gentoo.org> -exiftool-6.94.ebuild,
  -exiftool-6.98.ebuild, +exiftool-7.06.ebuild:
  Version bump to latest development version. 
  Remove intermediate development releases that won't become stable.
