@@ -5,16 +5,18 @@ DIST Image-ExifTool-7.00.tar.gz 1470095 RMD160 8f4c7d75288d3e161afe07ff0c69c20ec
 DIST Image-ExifTool-7.13.tar.gz 1538635 RMD160 2ead6890c274f3899703474e3fedd9b87f2340d1 SHA1 4791f3c37aa802505a64c00ea805290926ef35f8 SHA256 848fca14022be595fb794b302790f1cabc79d39ac2de79f1e57de65afb783f26
 DIST Image-ExifTool-7.35.tar.gz 1641772 RMD160 fdba5298f0655b0d83930daf0ca752fb236e67a4 SHA1 c392c8a053ff174ca092041cb55d6c3178668f38 SHA256 3d3371d9a50bdefbb5cc8b035394b5d76224fc99fc5be5aa5d6edb95419c6880
 DIST Image-ExifTool-7.39.tar.gz 1649281 RMD160 ee88d6eeb4e02e2176e9318c9eb88e93bde19b6f SHA1 14d88446f492e228b17cf96d7c1f01b6c6021114 SHA256 aa67e47db641b7bf5d94f29a2abb6eec9284b8a763e9894f24bf1a723785a28e
+DIST Image-ExifTool-7.50.tar.gz 1746946 RMD160 81b6ce5f20ea568201df4f1c0d1659ae0c71eca6 SHA1 6b32975f7af7993b2e9ee44ce4475680d62132b9 SHA256 7f7beb04e57d1a8b76cb7a461f9cfe0e345f634013af161ccb27ea802baaf571
 EBUILD exiftool-7.00.ebuild 829 RMD160 937acc758d392db00e0461c728ac2b915f8ccf96 SHA1 1b5490590f326ac7c8b163224d5a0ac68ef36995 SHA256 d42c8a32af5215191aae97dcff7d463ae960d0d93a2b8d472fbd96324283f1d9
 EBUILD exiftool-7.13.ebuild 829 RMD160 598bbeac211d9c031b6516007157b967cbc6cfd2 SHA1 75a6f4f29eaac5c452b5e15f5d7cf3a0abfd9024 SHA256 94eaf678e8daea233e499be0157e8039a2372c40f343e45d8df892c2064fdaea
 EBUILD exiftool-7.35.ebuild 833 RMD160 f7678f2e6f9265b980ad0d41fe7d04fa30a28599 SHA1 e6e9a18b85c2d26f65f6338ddf7393c05aa9f697 SHA256 7e92318a908fae11bf8a2128b1e74cbf962141670f51625b4b0fe71ea6c0026b
 EBUILD exiftool-7.39.ebuild 833 RMD160 63be477c15cfa29f9c1e1182ba3725f7c782dc65 SHA1 0f1652616ec9c0cbbea29e5cbeea611edd540bdb SHA256 d1eef168f51def8e0ec007f3152fd076e12eaca5128fc03014f44ddcd83e3768
-MISC ChangeLog 5643 RMD160 f91a9f63c59aee4003e5fd678ce0854215bc3eb9 SHA1 6cd50a22113aa052c51102d4e5f4355e457d814e SHA256 b02cf2b84706db4c790f17124911417f30c7dbdb3dc27c123a8062a5477aa5fe
+EBUILD exiftool-7.50.ebuild 833 RMD160 9fada0bb76e206f7bb30a198ac8b5b415c6442f4 SHA1 a72bb6bb4d744d9417a97924bc9cc2c187ffe538 SHA256 d759a0e2b6720b8b170176b4542d69a582a7c072a85eb4f26bc160e1a684ded4
+MISC ChangeLog 5784 RMD160 f24a7b1651dd3cb4b1237cf5f5ff38b2c91c0989 SHA1 8ee8861212362965e3c701f6eeee0b14b763fea6 SHA256 9e03397db5a9752eaf7892f0d9df0083d0f857931ccf16a42e3aaa8caa60a7c8
 MISC metadata.xml 245 RMD160 07762a1fa61a8e3a087699040581bcf40ebf9e2a SHA1 3adcb7c33de3b1373ea0cdb736d42538ac919edc SHA256 0f2a76638260d6f712f50ce1f79880b49bc7ad17f83252949a5f96ab5ba4d2bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiVXTgACgkQCzgcb6sPj4+CCgCfRzml0pQZ9+j3qjv1/bt4bPbU
-H54An0bI9loNaiHmG0ZBMVaFftSoCr7h
-=aeHd
+iEYEARECAAYFAkkFZCkACgkQCzgcb6sPj49XLwCfcGjsx+dfgRuA8OZmK7QrAzXG
+P34AoJKln4ArObPuJr0trcTXh0GIyJ8e
+=+7Cq
 -----END PGP SIGNATURE-----
